# icos-search-3

./: .replit  main.py  pyproject.toml  replit.md  setup.sh
attached_assets/: README.md
whoogle-search/: .replit  README_SETUP.md  app.py  clone_and_setup.sh  pyproject.toml  replit.md  requirements.txt  run_whoogle.py
whoogle-search/static/css/: style.css
whoogle-search/static/js/: script.js
whoogle-search/templates/: index.html
whoogle-search/whoogle-search/app/static/css/: dark-theme.css  header.css  input.css  light-theme.css  main.css  search.css
whoogle-search/whoogle-search/app/static/js/: autocomplete.js  voice-search.js
whoogle-search/whoogle-search/app/templates/: header.html  index.html
