[project]
name = "icos-search"
version = "2.0.0"
description = "Privacy-focused search engine based on Whoogle Search"
authors = [
    {name = "Rohith", email = "rohithsai0369@example.com"}
]
dependencies = [
    "flask>=2.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
    "werkzeug>=2.3.0",
    "jinja2>=3.1.0",
    "markupsafe>=2.1.0",
    "itsdangerous>=2.1.0",
    "click>=8.1.0",
    "blinker>=1.6.0",
    "stem>=1.8.0",
    "validators>=0.20.0",
    "user-agents>=2.2.0",
    "pyopenssl>=23.2.0",
    "gunicorn>=21.2.0"
]
requires-python = ">=3.8"
readme = "replit.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/Rohithprovide/icos-search-2"
Repository = "https://github.com/Rohithprovide/icos-search-2.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whoogle-search"]

[project.scripts]
icos-search = "main:main"
