[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "brotli>=1.1.0",
    "cryptography>=45.0.4",
    "cssutils>=2.11.1",
    "defusedxml>=0.7.1",
    "flask>=3.1.1",
    "pysocks>=1.7.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "stem>=1.8.2",
    "validators>=0.35.0",
    "waitress>=3.0.2",
]
